@@ -1,3 +1,4 @@
+2025. 1. 9. Removed pcd_io_test. [example]
 2025. 1. 9. Added zeo_ph2pcd. [app]
 2025. 1. 9. Modified zeo_phconv. [app]
 2025. 1. 9. Abolished zeo_stl2ztk. [app]
